[package]
name = "rust-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
rocket_okapi = { version = "0.8.0-rc.1", features=["swagger"]}
schemars = "0.8.7"

[dev-dependencies]
test-case = "1.2.1"